app2/templates/service.app2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app2
  name: app2
  namespace: fifty-two
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app2
  type: ClusterIP
