app2/templates/route.app2.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app2
  name: app2
  namespace: fifty-two
spec:
  port:
    targetPort: 8080-8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: app2
    weight: 100
  wildcardPolicy: None
